last files wrkshp01

--- a/wrkshp01_tf_representation/wrkshp01_tf_representation.ipynb
+++ b/wrkshp01_tf_representation/wrkshp01_tf_representation.ipynb
@@ -22,18 +22,18 @@
     "$\\quad \\quad G(f) = \\int_{-\\infty}^{\\infty} g(t) \\exp(-j2 \\pi ft) dt$,\n",
     "\n",
     "where $j=\\sqrt{-1}$, $f$ stands for frequency and $G(f) \\in \\mathbb{C}$.\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# iFFT\n",
     "\n",
-    "# Complex Numbers "
+    "Conversely, a transformed signal can be recovered by:\n",
+    "\n",
+    "$\\quad \\quad g(t) = \\int_{-\\infty}^{\\infty} G(f) \\exp(+j2 \\pi ft) df$,\n",
+    "\n",
+    "which stands for the Inverse FFT (IFFT).\n",
+    "\n",
+    "**(Remember)** A complex number $z$ can be represented in many forms as:\n",
+    "\n",
+    "$z = x +jy = r e^{j \\varphi} = r (cos \\varphi + j sin \\varphi) $\n",
+    "\n",
+    "<img src=\"images/wikipedia_complex_numbers.svg.png\" alt=\"Complex Numbers\" width=150px/>"
    ]
   },
   {
@@ -212,8 +212,8 @@
     "# AUXILIARY FUNCTIONS\n",
     "def fft_transform_abs_angle(audio):\n",
     "    S = fft_transform(audio)\n",
-    "    #return np.abs(S), np.angle(S)\n",
-    "    return np.abs(S), np.unwrap(np.angle(S))\n",
+    "    return np.abs(S), np.angle(S)\n",
+    "    #return np.abs(S), np.unwrap(np.angle(S))\n",
     "\n",
     "def merge_abs_ang(Sabs, Sang):\n",
     "    S = Sabs*np.exp(1j * Sang)\n",
@@ -247,8 +247,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Activity 02\n",
-    "Sabs_x, _ = fft_transform_abs_angle(male_audio)"
+    "# Activity 02\n"
    ]
   },
   {
@@ -256,9 +255,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "line_plot_args([Sabs, Sabs_x], labels=[\"Freq (Hz)\", \"Abs / Ang\"], x_range=[0,2000], subplot=False, legend=[\"female\",\"male\"])"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -313,7 +310,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "Sabs, Sphs = fft_transform_abs_angle(male_audio)\n",
@@ -434,7 +433,7 @@
     "    Sabs, Sphs = fft_transform_abs_angle(signal)\n",
     "    spec_samples.append(Sabs)\n",
     "\n",
-    "#line_plot_args(spec_samples)\n",
+    "# line_plot_args(spec_samples)\n",
     "line_plot_args(spec_samples, x_norm=window_samples/SR, x_range=[0, int(window_samples/2)])"
    ]
   },
@@ -470,7 +469,7 @@
     "    return Spectrogram\n",
     "\n",
     "\n",
-    "def matrix_plot_args(args, y_norm=1, subplot=True, x_range=None, labels=[\"X\",\"Y\"], legend=None):\n",
+    "def matrix_plot_args(args, y_norm=1, subplot=True, x_range=None, labels=[\"X\",\"Y\"], legend=None, transpose=True):\n",
     "    plt.figure(figsize=(12,3))\n",
     "    n_figs = len(args)\n",
     "    \n",
@@ -483,7 +482,11 @@
     "        if subplot:\n",
     "            plt.subplot(1,n_figs,idx+1);\n",
     "        \n",
-    "        plt.imshow(arg[x_range[0]:x_range[1]].T, aspect='auto', origin='lower')\n",
+    "        if transpose:\n",
+    "            plt.imshow(arg[x_range[0]:x_range[1]].T, aspect='auto', origin='lower')\n",
+    "        else:\n",
+    "            plt.imshow(arg[x_range[0]:x_range[1]], aspect='auto', origin='lower')\n",
+    "            \n",
     "        plt.xlabel(labels[0]); plt.ylabel(labels[1]); plt.colorbar()\n",
     "        \n",
     "    if not subplot:\n",
@@ -635,7 +638,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### F. Mel-Spectrogram and MFCC "
+    "##### F. Mel-Spectrogram and MFCC \n",
+    "<img src=\"images/mel_filterbank.png\" alt=\"Complex Numbers\" />"
    ]
   },
   {
@@ -678,7 +682,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "matrix_plot_args([female_mel_spec.T, female_mfcc.T], labels=[\"Frames\", \"Mel-Spec / MFCC\"])"
+    "matrix_plot_args([female_mel_spec, female_mfcc], labels=[\"Frames\", \"Mel-Spec / MFCC\"], transpose=False)"
    ]
   },
   {
@@ -687,13 +691,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# MALE VERSION\n",
-    "male_spec_complete = gen_spectrogram_complete(male_audio, win_size=320, win_hop=160, n_fft=512, dB=True)\n",
-    "\n",
-    "male_mel_spec = spec_2_melspec(male_spec_complete, n_fft=512)\n",
-    "male_mfcc = melspec_2_mfcc(male_mel_spec)\n",
-    "\n",
-    "matrix_plot_args([male_mel_spec.T, male_mfcc.T], labels=[\"Frames\", \"Mel-Spec / MFCC\"])"
+    "# MALE VERSION"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "###### Activity 05\n",
+    "Why (and when) do you think one should adopt the Mel-Spectrogram or the MFCC for a particurlar application?"
    ]
   },
   {
@@ -716,9 +722,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 3 classes -> 4 Plots\n",
-    "audio_path = \"example_signals/251-118436-0020.wav\"\n",
-    "ex_audio, sr = read_wav(audio_path)"
+    "kwd_paths = [\"example_signals/librispeech_male251_i_am_going.wav\",\n",
+    "             \"example_signals/kwd_class2.wav\",\n",
+    "             \"example_signals/kwd_class3.wav\",\n",
+    "             \"example_signals/kwd_class5.wav\"]"
    ]
   },
   {
@@ -727,8 +734,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plt.figure(figsize=(5,3))\n",
-    "plt.plot(ex_audio)"
+    "kwd_audios   = [read_wav(path) for path in kwd_paths]\n",
+    "kwd_specs    = [gen_spectrogram_complete(audio, n_fft=512, dB=True) for audio,_ in kwd_audios]\n",
+    "kwd_melspecs = [spec_2_melspec(specs, n_fft=512) for specs in kwd_specs]\n",
+    "kwd_mfccs    = [melspec_2_mfcc(melspec) for melspec in kwd_melspecs]"
    ]
   },
   {
@@ -737,8 +746,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "temp = ex_audio[2000:12000]\n",
-    "write_wav(\"temp.wav\", temp, SR)"
+    "matrix_plot_args(kwd_melspecs, transpose=False)"
    ]
   },
   {
@@ -747,8 +755,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "display_audio(\"temp.wav\")"
+    "# matrix_plot_args(kwd_mfccs, transpose=False)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "###### Activity 06\n",
+    "Two audios above correspond to the same spoken words. Could you identify which ones?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -763,11 +786,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 2 Musics\n",
-    "# Listen\n",
-    "# Spectrogram\n",
-    "\n",
-    "# Recognition? Try Shazam"
+    "music_paths = [\"example_signals/youtube_music01_ch01.wav\",\n",
+    "              \"example_signals/youtube_music02_ch01.wav\"]"
    ]
   },
   {
@@ -775,7 +795,50 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "music_audios   = [read_wav(path) for path in music_paths]\n",
+    "music_specs    = [gen_spectrogram_complete(audio, n_fft=512, dB=True) for audio,_ in music_audios]\n",
+    "music_melspecs = [spec_2_melspec(specs, n_fft=512) for specs in music_specs]\n",
+    "music_mfccs    = [melspec_2_mfcc(melspec) for melspec in music_melspecs]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "matrix_plot_args(music_melspecs, transpose=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "matrix_plot_args(music_mfccs, transpose=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "display_audio(music_paths[0])\n",
+    "display_audio(music_paths[1])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "###### Activity 07\n",
+    "What approach could be considered to perform music recognition using a TF Representation?\n",
+    "\n",
+    "(After thinking about it, you might want to look the Shazam paper: https://www.ee.columbia.edu/~dpwe/papers/Wang03-shazam.pdf)"
+   ]
   },
   {
    "cell_type": "code",
