jupyter latest version

--- a/wrkshp01_tf_representation/wrkshp01_tf_representation.ipynb
+++ b/wrkshp01_tf_representation/wrkshp01_tf_representation.ipynb
@@ -433,8 +433,8 @@
     "    Sabs, Sphs = fft_transform_abs_angle(signal)\n",
     "    spec_samples.append(Sabs)\n",
     "\n",
-    "# line_plot_args(spec_samples)\n",
-    "line_plot_args(spec_samples, x_norm=window_samples/SR, x_range=[0, int(window_samples/2)])"
+    "line_plot_args(spec_samples)\n",
+    "#line_plot_args(spec_samples, x_norm=window_samples/SR, x_range=[0, int(window_samples/2)])"
    ]
   },
   {
@@ -455,8 +455,8 @@
     "        frame = audio[start:end]\n",
     "        Sframe, _ = fft_transform_abs_angle(frame)\n",
     "        \n",
-    "        #Spectrogram.append(Sframe ** 2)\n",
-    "        Spectrogram.append(Sframe[:int(len(Sframe)/2 + 1)]**2)\n",
+    "        Spectrogram.append(Sframe ** 2)\n",
+    "        #Spectrogram.append(Sframe[:int(len(Sframe)/2 + 1)]**2)\n",
     "        \n",
     "        start+=shift\n",
     "        end+=shift\n",
