include write_wav with soundfile

--- a/wrkshp01_tf_representation/wrkshp01_tf_representation.ipynb
+++ b/wrkshp01_tf_representation/wrkshp01_tf_representation.ipynb
@@ -53,6 +53,7 @@
     "import numpy as np\n",
     "import scipy\n",
     "import pickle\n",
+    "import soundfile as sf\n",
     "\n",
     "import IPython\n",
     "import matplotlib.pyplot as plt"
@@ -82,8 +83,9 @@
     "    return audio, sr\n",
     "\n",
     "def write_wav(audio_path, audio, sr):\n",
-    "    scipy.io.wavfile.write(audio_path, sr, audio)\n",
-    "\n",
+    "    #scipy.io.wavfile.write(audio_path, sr, audio)\n",
+    "    sf.write(audio_path, 0.95*audio/np.max(audio), sr)\n",
+    "    \n",
     "def display_audio(audio_path):\n",
     "    IPython.display.display(IPython.display.Audio(audio_path))\n",
     "\n",
